<resources>
    <string name="app_name">Carfax</string>
    <string name="call_dealer">Call Dealer</string>
    <string name="vehicleInfo">Vehicle Info</string>
    <string name="location">Location</string>
    <string name="exterior_color">Exterior Color</string>
    <string name="interior_color">Interior Color</string>
    <string name="drive_type">Drive Type</string>
    <string name="transmission">Transmission</string>
    <string name="body_style">Body Style</string>
    <string name="engine">Engine</string>
    <string name="fuel">Fuel</string>
    <string name="label_fuel">Fuel</string>
    <string name="label_engine">Engine</string>
    <string name="label_body_style">Body Style</string>
    <string name="label_transmission">Transmission</string>
    <string name="label_drive_type">Drive Type</string>
    <string name="label_interior_color">Interior Color</string>
    <string name="label_exterior_color">Exterior Color</string>
    <string name="label_location">Location</string>
</resources>