<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CarDetailActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/detail_carImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp" />

    <TextView
        android:id="@+id/detail_year_make_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/carfax_gray"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/detail_price_miles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="60dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vehicleInfo"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="30dp"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp">

        <LinearLayout
            android:id="@+id/infoLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/label_location"
                android:text="@string/label_location" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/label_exterior_color"
                android:text="@string/label_exterior_color" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/label_interior_color"
                android:text="@string/label_interior_color" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/label_driveType"
                android:text="@string/label_drive_type" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/label_transmission"
                android:text="@string/label_transmission" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/label_bodyStyle"
                android:text="@string/label_body_style" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/label_engine"
                android:text="@string/label_engine" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/label_fuel"
                android:text="@string/label_fuel" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/infoRight"
            android:orientation="vertical"
            android:layout_toEndOf="@id/infoLeft"
            android:layout_marginStart="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/location"
                android:textColor="@color/black"
                android:text="@string/location" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/exterior_color"
                android:textColor="@color/black"
                android:text="@string/exterior_color" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/interior_color"
                android:textColor="@color/black"
                android:text="@string/interior_color" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:id="@+id/driveType"
                android:text="@string/drive_type" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:id="@+id/transmission"
                android:text="@string/transmission" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:id="@+id/bodyStyle"
                android:text="@string/body_style" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:id="@+id/engine"
                android:text="@string/engine" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:id="@+id/fuel"
                android:text="@string/fuel" />

        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_margin="35dp"
       android:background="@color/carfax_light_gray"/>


    <Button
        android:id="@+id/detail_call_dealer_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/carfax_blue"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="33dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:textSize="16sp"
        android:text="@string/call_dealer" />

</LinearLayout>